Add plausible analytics

--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>VSCode Web</title>
+    <script
+      defer
+      data-domain="deth.net"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
 
     <!-- Disable pinch zooming -->
     <meta
