Tweak plausible domain

--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -5,7 +5,7 @@
     <title>VSCode Web</title>
     <script
       defer
-      data-domain="deth.net"
+      data-domain="etherscan.deth.net"
       src="https://plausible.io/js/plausible.js"
     ></script>
 
