Normalize project naming, Tweak readme headers

--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>VSCode Web</title>
+    <title>Ethereum Code Viewer</title>
     <script
       defer
       data-domain="ecv.deth.net"
