Deploy entrypoint and app (#48)

--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -5,7 +5,7 @@
     <title>Ethereum Code Viewer</title>
     <script
       defer
-      data-domain="ecv.deth.net"
+      data-domain="code.deth.net"
       src="https://plausible.io/js/plausible.js"
     ></script>
 
