--- a/packages/entrypoint/public/index.html
+++ b/packages/entrypoint/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ethereum Code Viewer</title>
+    <link rel="icon" href="/dethcode.svg" type="image/svg+xml" />
 
     <!-- Disable pinch zooming -->
     <meta
