--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -8,6 +8,7 @@
       data-domain="code.deth.net"
       src="https://plausible.io/js/plausible.js"
     ></script>
+    <link rel="icon" href="/dethcode.svg" type="image/svg+xml" />
 
     <!-- Disable pinch zooming -->
     <meta
