Replace all mentions of 'Ethereum Code Viewer' with 'DethCode' (#51)
* Replace all mentions of 'Ethereum Code Viewer' with 'DethCode'

* Use new logo

* Update README.md

* Change last lowercase dethcode

--- a/packages/entrypoint/public/index.html
+++ b/packages/entrypoint/public/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Ethereum Code Viewer</title>
-    <link rel="icon" href="/dethcode.svg" type="image/svg+xml" />
+    <title>DethCode</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 
     <!-- Disable pinch zooming -->
     <meta
