--- a/packages/vscode-host/public/index.html
+++ b/packages/vscode-host/public/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Ethereum Code Viewer</title>
+    <title>DethCode</title>
     <script
       defer
       data-domain="code.deth.net"
       src="https://plausible.io/js/plausible.js"
     ></script>
-    <link rel="icon" href="/dethcode.svg" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 
     <!-- Disable pinch zooming -->
     <meta
