Fix link to explorer (#66)
* Make entrypoint iframe permissive enough to allow navigation

* Make entrypoint iframe as permissive as CodeSandbox

--- a/packages/entrypoint/public/index.html
+++ b/packages/entrypoint/public/index.html
@@ -32,7 +32,8 @@
     <iframe
       src="{{APPLICATION_URL}}"
       id="frame"
-      sandbox="allow-scripts allow-popups allow-same-origin"
+      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+      sandbox="allow-scripts allow-popups allow-same-origin allow-popups-to-escape-sandbox allow-top-navigation allow-forms allow-modals allow-presentation allow-downloads allow-pointer-lock"
     ></iframe>
   </body>
 
